--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-adsense-account" content="ca-pub-9467128470827962">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
    <meta name="description" content="GetReels is your one-stop destination for downloading Instagram videos quickly and easily. Simply paste the URL of the Instagram video and get instant access to download options.">
