--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,8 @@
    <meta name="description" content="GetReels is your one-stop destination for downloading Instagram videos quickly and easily. Simply paste the URL of the Instagram video and get instant access to download options.">
 <meta name="keywords" content="Instagram video downloader, download Instagram videos, save Instagram videos, Instagram video download tool, Instagram download, IG video downloader">
 <title>GetReels - Download Instagram Videos Easily</title>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9467128470827962"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     {{{body}}}
