--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,17 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="google-adsense-account" content="ca-pub-9467128470827962">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
-   <meta name="description" content="GetReels is your one-stop destination for downloading Instagram videos quickly and easily. Simply paste the URL of the Instagram video and get instant access to download options.">
-<meta name="keywords" content="Instagram video downloader, download Instagram videos, save Instagram videos, Instagram video download tool, Instagram download, IG video downloader">
-<title>GetReels - Download Instagram Videos Easily</title>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9467128470827962"
-     crossorigin="anonymous"></script>
+    <meta name="description" content="
+   GetReels is your ultimate solution for effortlessly downloading Instagram videos in just a few clicks. Whether it's a captivating clip, a hilarious moment, or an inspiring post, GetReels offers a seamless experience for grabbing your favorite Instagram videos with ease. Simply paste the URL of the Instagram video into our user-friendly interface and unlock instant access to a plethora of download options. With GetReels, you can save Instagram videos directly to your device in high quality, ensuring you never miss a moment worth keeping. Our intuitive platform streamlines the process, allowing you to download Instagram videos quickly and conveniently. Say goodbye to complicated procedures and hello to hassle-free downloading with GetReels.
+Instagram video downloader
+Download Instagram videos
+Save Instagram videos
+Instagram video download tool
+Instagram download
+IG video downloader
+Instagram saver
+Grab Instagram videos
+Download IGTV videos
+Download Instagram Reels
+Download Instagram stories
+Instagram downloader app
+Insta video downloader
+Instagram media downloader">
+    <meta name="keywords"
+        content="Instagram video downloader, download Instagram videos, save Instagram videos, Instagram video download tool, Instagram download, IG video downloader">
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
+    <title>GetReels - Download Instagram Videos Easily</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9467128470827962"
+        crossorigin="anonymous"></script>
 </head>
+
 <body>
     {{{body}}}
 </body>
+
 </html>
+
+<script>
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+        "@type": "Organization",
+        "name": "GetReels",
+        "url": "https://getreels.cloud/",
+        "logo": "https://getreels.cloud/images/favicon.png",
+        "description": "GetReels is your one-stop destination for downloading Instagram videos quickly and easily. Simply paste the URL of the Instagram video and get instant access to download options.",
+        "sameAs": [
+        "https://www.linkedin.com/in/afsalmadathingal"
+        ]
+}
+</script>
+</script>
