--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="/style/home.css">
 
+
+<main>
 <div class="home">
 
 
@@ -56,7 +58,7 @@
 
 </div>
 
-
+</main>
 
 <script>
 
