--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,28 +1,18 @@
 <link rel="stylesheet" href="/style/home.css">
-
+<link rel="stylesheet" href="/style/card.css">
 
 <main>
 <div class="home">
-
-
 <nav class="navbar">
   <div class="container-fluid">
     <h1 class="logo-get">GetReels</h1>
   </div>
 </nav>
-
-
-
-
-
 <div class="input-group">
     <input type="text" class="input" id="url" name="url" placeholder="Paste URL of the video" autocomplete="off">
     <input class="button--submit" value="Download" type="submit">
 </div>
-
-
 <div class="loading-bar">Loading</div>
-
     <div class="container">
   <div class="palette">
     <div class="image">
@@ -59,6 +49,44 @@
 </div>
 
 </main>
+
+<article>
+  <section class="card">
+    <div class="text-content">
+      <h3>Instagram video downloader</h3>
+      <p>getreels was created to allow you to Instagram Video Download your own content. Snapinsta supports downloading videos for some videos and many videos from Insta.</p>  
+      <a href="#">Download now</a>
+    </div>
+    <div class="visual">
+      <img  src="/images/banner-hand.jpg" alt="a man scrolling instagram" />
+    </div>
+  </section> 
+
+  <section class="card">
+    <div class="text-content">
+      <h3>Download Instagram Reels</h3>
+      <p>Instagram Reels Downloader by getreels will help you download Reels videos from Instagram posts to your device in the easiest way when Instagram does not support you in this.</p>  
+      <a href="#">Download now</a>
+    </div>
+    <div class="visual">
+      <img src="/images/banner-purple.jpg" alt="a man inside instagram page" />
+    </div>
+  </section> 
+
+  <section class="card">
+    <div class="text-content">
+      <h3>Download any video from instagram</h3>
+      <p>.</p>  
+      <a href="#">Download now</a>
+    </div>
+    <div class="visual">
+      <img src="https://images.unsplash.com/photo-1611703372231-02ffff8abee6?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzgzMTEyNTU&ixlib=rb-4.0.3&q=80" alt="" />
+    </div>
+  </section> 
+</article>
+
+
+
 
 <script>
 
