--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -65,7 +65,8 @@
   <section class="card">
     <div class="text-content">
       <h3>Download Instagram Reels</h3>
-      <p>Instagram Reels Downloader by getreels will help you download Reels videos from Instagram posts to your device in the easiest way when Instagram does not support you in this.</p>  
+      <p>
+Instagram Reels Downloader by Snapinsta will help you download Reels videos from Instagram posts to your device in the easiest way when Instagram does not support you in this.</p>  
       <a href="#">Download now</a>
     </div>
     <div class="visual">
@@ -75,12 +76,12 @@
 
   <section class="card">
     <div class="text-content">
-      <h3>Download any video from instagram</h3>
-      <p>.</p>  
+      <h3>Design that Speaks to Your Audience</h3>
+      <p>We work closely with you to understand your brand and your customers, so we can create a website that speaks directly to your target audience.</p>  
       <a href="#">Download now</a>
     </div>
     <div class="visual">
-      <img src="https://images.unsplash.com/photo-1611703372231-02ffff8abee6?crop=entropy&cs=tinysrgb&fm=jpg&ixid=MnwzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2NzgzMTEyNTU&ixlib=rb-4.0.3&q=80" alt="" />
+      <img src="/images/banner-girl.jpg" alt="a girl holding instagram logo" />
     </div>
   </section> 
 </article>
