--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/style/home.css">
 <link rel="stylesheet" href="/style/card.css">
+ <link rel="stylesheet" href="/style/footer.css">
 
 <main>
 <div class="home">
@@ -51,6 +52,7 @@
 </main>
 
 <article>
+  <div class="cards-content">
   <section class="card">
     <div class="text-content">
       <h3>Instagram video downloader</h3>
@@ -76,18 +78,50 @@ Instagram Reels Downloader by Snapinsta will help you download Reels videos from
 
   <section class="card">
     <div class="text-content">
-      <h3>Design that Speaks to Your Audience</h3>
-      <p>We work closely with you to understand your brand and your customers, so we can create a website that speaks directly to your target audience.</p>  
+      <h3>Download anything from the instagram</h3>
+      <p>Instagram Reels Downloader by getreels is a tool designed to facilitate the downloading of Reels videos from Instagram posts directly onto your device. This becomes particularly useful when Instagram itself does not offer a built-in feature for downloading Reels. Essentially, it acts as a bridge to overcome this limitation..</p>  
       <a href="#">Download now</a>
     </div>
     <div class="visual">
       <img src="/images/banner-girl.jpg" alt="a girl holding instagram logo" />
     </div>
   </section> 
+  </div>
 </article>
 
 
+<footer class="footer2">
+    <div class="waves">
+      <div class="wave" id="wave1"></div>
+      <div class="wave" id="wave2"></div>
+      <div class="wave" id="wave3"></div>
+      <div class="wave" id="wave4"></div>
+    </div>
+    <ul class="social-icon">
+      <li class="social-icon__item"><a class="social-icon__link" href="https://www.facebook.com/afsalshaofficial/">
+          <ion-icon name="logo-facebook"></ion-icon>
+        </a></li>
+      <li class="social-icon__item"><a class="social-icon__link" href="https://twitter.com/emailafsalsha">
+          <ion-icon name="logo-twitter"></ion-icon>
+        </a></li>
+      <li class="social-icon__item"><a class="social-icon__link" href="https://www.linkedin.com/in/afsalmadathingal/">
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </a></li>
+      <li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/afsal.madathingal/">
+          <ion-icon name="logo-instagram"></ion-icon>
+        </a></li>
+    </ul>
+    <ul class="menu">
+      <li class="menu__item"><a class="menu__link" href="/">Home</a></li>
+      <li class="menu__item"><a class="menu__link" href="/about">About</a></li>
+      <li class="menu__item"><a class="menu__link" href="#">Services</a></li>
+      <li class="menu__item"><a class="menu__link" href="/contactus">Contact</a></li>
 
+    </ul>
+    <p>&copy;2024 Getreels | All Rights Reserved</p>
+  </footer>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 <script>
 
