--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,15 +11,21 @@
     <meta name="keywords"
         content="Instagram video downloader, download Instagram videos, save Instagram videos, Instagram video download tool, Instagram download, IG video downloader">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
-    <title>GetReels - Download Instagram Videos Easily</title>
+    <title>{{title}}</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9467128470827962"
         crossorigin="anonymous"></script>
+    
+
 </head>
 
 <body>
-    {{{body}}}
-</body>
 
+    {{{body}}}
+
+
+
+
+</body>
 </html>
 
 <script>
