--- a/public/style/card.css
+++ b/public/style/card.css
@@ -90,9 +90,7 @@ body {
 } 
 
 @media all and (max-width:1100px) {
-  body {
-    padding:96px 48px 24px
-  }
+ 
   article {
     width:100%;
     max-width:100%;
@@ -111,9 +109,7 @@ body {
   }
 }
 @media all and (max-width:720px) {
-  body {
-    padding:48px 24px 0
-  }
+ 
   section.card {
     margin:64px 0;
     padding:88px 36px 36px;
@@ -155,4 +151,10 @@ html {
 .visual img {
   
   height: auto;
+}
+
+.cards-content
+{
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
