--- a/views/contactus.hbs
+++ b/views/contactus.hbs
@@ -14,7 +14,8 @@
       <div class="text">
         <h2> Contact Us </h2>
         <h5>GetReels <span> Instagram Video Downloader</span></h5>
-          <p>Welcome to our Instagram Reels Downloader! We're here to make your social media experience even better. Ever come across a fantastic Reel on Instagram and wished you could save it for later? That's where we come in. Our platform offers a straightforward solution to download your favorite Reels videos with just a click. No fuss, no hassle—just instant access to the content you love. Say hello to effortless downloading with our Instagram Reels Downloader!</p>
+          <p>We're here to make your social media experience even better.</p>
+          <p>Email : contact.getreels@gmail.com </p>
         <div class="data">
         <a href="https://www.linkedin.com/in/afsalmadathingal/" class="hire">Contact me </a>
         </div>
