--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,7 +5,23 @@
     <meta charset="UTF-8">
     <meta name="google-adsense-account" content="ca-pub-9467128470827962">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/images/favicon.png" type="image/x-icon">
+<link rel="apple-touch-icon" sizes="57x57" href="/images/-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/images/-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/images/-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/images/-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/images/-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/images/-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/images/-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/images/-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/images/-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/images/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/iamges/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+<link rel="manifest" href="/images/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
     <meta name="description" content="
    GetReels is your ultimate solution for effortlessly downloading Instagram videos in just a few clicks. Whether it's a captivating clip, a hilarious moment, or an inspiring post, GetReels offers a seamless experience for grabbing your favorite Instagram videos with ease. Simply paste the URL of the Instagram video into our user-friendly interface and unlock instant access to a plethora of download options. With GetReels, you can save Instagram videos directly to your device in high quality, ensuring you never miss a moment worth keeping. Our intuitive platform streamlines the process, allowing you to download Instagram videos quickly and conveniently. Say goodbye to complicated procedures and hello to hassle-free downloading with GetReels.">
     <meta name="keywords"
