--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,209 +1,233 @@
 <link rel="stylesheet" href="/style/home.css">
 <link rel="stylesheet" href="/style/card.css">
- <link rel="stylesheet" href="/style/footer.css">
+<link rel="stylesheet" href="/style/footer.css">
 
 <main>
-<div class="home">
-<nav class="navbar">
-  <div class="container-fluid">
-    <h1 class="logo-get">GetReels</h1>
-  </div>
-</nav>
-<div class="input-group">
-    <input type="text" class="input" id="url" name="url" placeholder="Paste URL of the video" autocomplete="off">
-    <input class="button--submit" value="Download" type="submit">
+  <div class="home">
+    <nav class="navbar">
+      <div class="container-fluid">
+        <h1 class="logo-get">GetReels</h1>
+      </div>
+    </nav>
+    <div class="headline-one">
+  <h1>Instagram Video Download</h1>
+  <p>Getreels supports all types of Instagram videos links</p>
 </div>
-<div class="loading-bar">Loading</div>
+    <div class="input-group">
+      <input type="text" class="input" id="url" name="url" placeholder="Paste Instagram Link here" autocomplete="off">
+      <input class="button--submit" value="Download" type="submit">
+    </div>
+    <div class="loading-bar">Loading</div>
     <div class="container">
-  <div class="palette">
-    <div class="image">
-        <img id="insta-image" src="https://play-lh.googleusercontent.com/sn_2xT5NCjg-Km4XiZMAOM6xb4LxDqC_9sd5TENCjbU9D4aXVNrendOmIzHFyQo_kahz" alt="">
+      <div class="palette">
+        <div class="image">
+          <img id="insta-image"
+            src="https://play-lh.googleusercontent.com/sn_2xT5NCjg-Km4XiZMAOM6xb4LxDqC_9sd5TENCjbU9D4aXVNrendOmIzHFyQo_kahz"
+            alt="">
+        </div>
+      </div>
+      <div id="footer">
+        <div id="bookmarks">
+          <svg stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none"
+            viewBox="0 0 24 24" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
+            <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"></path>
+          </svg>
+          <span>53421</span>
+        </div>
+        <svg stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none"
+          viewBox="0 0 24 24" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
+          <circle r="1" cy="12" cx="12"></circle>
+          <circle r="1" cy="12" cx="19"></circle>
+          <circle r="1" cy="12" cx="5"></circle>
+        </svg>
+      </div>
     </div>
-  </div>
-  <div id="footer">
-    <div id="bookmarks">
-      <svg stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
-        <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"></path>
+
+    <button class="botao">
+      <svg width="24px" height="24px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="mysvg">
+        <g id="SVGRepo_bgCarrier" stroke-width="0">
+        </g>
+        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+        <g id="SVGRepo_iconCarrier">
+          <g id="Interface / Download">
+            <path id="Vector" d="M6 21H18M12 3V17M12 17L17 12M12 17L7 12" stroke="#f1f1f1" stroke-width="2"
+              stroke-linecap="round" stroke-linejoin="round">
+            </path>
+          </g>
+        </g>
       </svg>
-      <span>53421</span>
-    </div>
-    <svg stroke-linejoin="round" stroke-linecap="round" stroke-width="2" stroke="currentColor" fill="none" viewBox="0 0 24 24" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
-      <circle r="1" cy="12" cx="12"></circle>
-      <circle r="1" cy="12" cx="19"></circle>
-      <circle r="1" cy="12" cx="5"></circle>
-    </svg>
+      <span class="texto">Wait for 10 Second </span>
+    </button>
+
+
   </div>
-</div>
-
-<button class="botao">
-  <svg width="24px" height="24px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="mysvg"><g id="SVGRepo_bgCarrier" stroke-width="0">
-    </g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier">
-       <g id="Interface / Download"> 
-       <path id="Vector" d="M6 21H18M12 3V17M12 17L17 12M12 17L7 12" stroke="#f1f1f1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-       </path>
-    </g> </g>
-  </svg>
-  <span class="texto">Download</span>
-</button>
-
-
-</div>
 
 </main>
 
+<div class="headline">
+  <h1>All features of Getreels</h1>
+  <p>Getreels supports all types of Instagram videos links</p>
+</div>
+
 <article>
   <div class="cards-content">
-  <section class="card">
-    <div class="text-content">
-      <h3>Instagram video downloader</h3>
-      <p>getreels was created to allow you to Instagram Video Download your own content. Snapinsta supports downloading videos for some videos and many videos from Insta.</p>  
-      <a href="#">Download now</a>
-    </div>
-    <div class="visual">
-      <img  src="/images/banner-hand.jpg" alt="a man scrolling instagram" />
-    </div>
-  </section> 
+    <section class="card">
+      <div class="text-content">
+        <h3>Instagram video downloader</h3>
+        <p>getreels was created to allow you to Instagram Video Download your own content. Getreels supports
+          downloading videos for some videos and many videos from Insta.</p>
+        <a href="#">Download now</a>
+      </div>
+      <div class="visual">
+        <img src="/images/banner-hand.jpg" alt="a man scrolling instagram" />
+      </div>
+    </section>
 
-  <section class="card">
-    <div class="text-content">
-      <h3>Download Instagram Reels</h3>
-      <p>
-Instagram Reels Downloader by Snapinsta will help you download Reels videos from Instagram posts to your device in the easiest way when Instagram does not support you in this.</p>  
-      <a href="#">Download now</a>
-    </div>
-    <div class="visual">
-      <img src="/images/banner-purple.jpg" alt="a man inside instagram page" />
-    </div>
-  </section> 
+    <section class="card">
+      <div class="text-content">
+        <h3>Download Instagram Reels</h3>
+        <p>
+          Instagram Reels Downloader by Getreelswill help you download Reels videos from Instagram posts to your
+          device in the easiest way when Instagram does not support you in this.</p>
+        <a href="#">Download now</a>
+      </div>
+      <div class="visual">
+        <img src="/images/banner-purple.jpg" alt="a man inside instagram page" />
+      </div>
+    </section>
 
-  <section class="card">
-    <div class="text-content">
-      <h3>Download anything from the instagram</h3>
-      <p>Instagram Reels Downloader by getreels is a tool designed to facilitate the downloading of Reels videos from Instagram posts directly onto your device. This becomes particularly useful when Instagram itself does not offer a built-in feature for downloading Reels. Essentially, it acts as a bridge to overcome this limitation..</p>  
-      <a href="#">Download now</a>
-    </div>
-    <div class="visual">
-      <img src="/images/banner-girl.jpg" alt="a girl holding instagram logo" />
-    </div>
-  </section> 
+    <section class="card">
+      <div class="text-content">
+        <h3>Download anything from the instagram</h3>
+        <p>Instagram Reels Downloader by getreels is a tool designed to facilitate the downloading of Reels videos from
+          Instagram posts directly onto your device. This becomes particularly useful when Instagram itself does not
+          offer a built-in feature for downloading Reels. Essentially, it acts as a bridge to overcome this limitation..
+        </p>
+        <a href="#">Download now</a>
+      </div>
+      <div class="visual">
+        <img src="/images/banner-girl.jpg" alt="a girl holding instagram logo" />
+      </div>
+    </section>
   </div>
 </article>
-
-
 <footer class="footer2">
-    <div class="waves">
-      <div class="wave" id="wave1"></div>
-      <div class="wave" id="wave2"></div>
-      <div class="wave" id="wave3"></div>
-      <div class="wave" id="wave4"></div>
-    </div>
-    <ul class="social-icon">
-      <li class="social-icon__item"><a class="social-icon__link" href="https://www.facebook.com/afsalshaofficial/">
-          <ion-icon name="logo-facebook"></ion-icon>
-        </a></li>
-      <li class="social-icon__item"><a class="social-icon__link" href="https://twitter.com/emailafsalsha">
-          <ion-icon name="logo-twitter"></ion-icon>
-        </a></li>
-      <li class="social-icon__item"><a class="social-icon__link" href="https://www.linkedin.com/in/afsalmadathingal/">
-          <ion-icon name="logo-linkedin"></ion-icon>
-        </a></li>
-      <li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/afsal.madathingal/">
-          <ion-icon name="logo-instagram"></ion-icon>
-        </a></li>
-    </ul>
-    <ul class="menu">
-      <li class="menu__item"><a class="menu__link" href="/">Home</a></li>
-      <li class="menu__item"><a class="menu__link" href="/about">About</a></li>
-      <li class="menu__item"><a class="menu__link" href="#">Services</a></li>
-      <li class="menu__item"><a class="menu__link" href="/contactus">Contact</a></li>
+  <div class="waves">
+    <div class="wave" id="wave1"></div>
+    <div class="wave" id="wave2"></div>
+    <div class="wave" id="wave3"></div>
+    <div class="wave" id="wave4"></div>
+  </div>
+  <ul class="social-icon">
+    <li class="social-icon__item"><a class="social-icon__link" href="https://www.facebook.com/afsalshaofficial/">
+        <ion-icon name="logo-facebook"></ion-icon>
+      </a></li>
+    <li class="social-icon__item"><a class="social-icon__link" href="https://twitter.com/emailafsalsha">
+        <ion-icon name="logo-twitter"></ion-icon>
+      </a></li>
+    <li class="social-icon__item"><a class="social-icon__link" href="https://www.linkedin.com/in/afsalmadathingal/">
+        <ion-icon name="logo-linkedin"></ion-icon>
+      </a></li>
+    <li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/afsal.madathingal/">
+        <ion-icon name="logo-instagram"></ion-icon>
+      </a></li>
+  </ul>
+  <ul class="menu">
+    <li class="menu__item"><a class="menu__link" href="/">Home</a></li>
+    <li class="menu__item"><a class="menu__link" href="/about">About</a></li>
+    <li class="menu__item"><a class="menu__link" href="#">Services</a></li>
+    <li class="menu__item"><a class="menu__link" href="/contactus">Contact</a></li>
 
-    </ul>
-    <p>&copy;2024 Getreels | All Rights Reserved</p>
-  </footer>
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  </ul>
+  <p>&copy;2024 Getreels | All Rights Reserved</p>
+</footer>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+
+
 
 <script>
 
-    document.addEventListener('DOMContentLoaded', () => {
-        
+  document.addEventListener('DOMContentLoaded', () => {
 
-        const DownloadButton = document.querySelector('.botao');
-        
-        const getReels = document.querySelector('.button--submit');
 
-        getReels.addEventListener('click', (event) => {
+    const DownloadButton = document.querySelector('.botao');
 
-            const loading= document.querySelector('.loading-bar')
-            var url = document.getElementById('url').value
-            const instaImage= document.getElementById('insta-image')
-            let newurl;
-            
+    const getReels = document.querySelector('.button--submit');
 
-           var urlRegx = /https?:\/\/(www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b([-a-zA-Z0-9()@:%_\+.~#?&//=]*)/g
+    getReels.addEventListener('click', (event) => {
 
-            if (!urlRegx.test(document.getElementById('url').value)) {
-                
-                return alert('Please enter a valid URL')
+      const loading = document.querySelector('.loading-bar')
+      var url = document.getElementById('url').value
+      const instaImage = document.getElementById('insta-image')
+      let newurl;
 
-            }
-    console.log(url)
 
-          
-           const questionMarkIndex = url.indexOf("?");
-    
-    // If "?" exists in the URL, remove everything after it
-    if (questionMarkIndex !== -1) {
+      var urlRegx = /https?:\/\/(www\.)?[-a-zA-Z0-9@:%._\+~#=]{1,256}\.[a-zA-Z0-9()]{1,6}\b([-a-zA-Z0-9()@:%_\+.~#?&//=]*)/g
+
+      if (!urlRegx.test(document.getElementById('url').value)) {
+
+        return alert('Please enter a valid URL')
+
+      }
+      console.log(url)
+
+
+      const questionMarkIndex = url.indexOf("?");
+
+      // If "?" exists in the URL, remove everything after it
+      if (questionMarkIndex !== -1) {
         newurl = url.substring(0, questionMarkIndex);
         newurl += "?utm_source=ig_web_copy_link";
-    }
-    
-    // Add "&utm_source=ig_web_copy_link" to the end of the URL
-   
-          
+      }
 
-            loading.style.display = 'block';
-            
-            console.log(url)
-
-            url = newurl ? newurl : url
-           
-           console.log(newurl)
-           
-           fetch('/download', {
-               method: 'POST',
-               headers: {
-                   'Content-Type': 'application/json'
-               },
-               body: JSON.stringify({
-                   url 
-               })
-           }).then(res => {
-               return res.json()
-           }).then(data => {
-               
-               console.log(data)
-
-               if (!data.status) {
-                   
-                  return alert(data.error)
-               }
+      // Add "&utm_source=ig_web_copy_link" to the end of the URL
 
 
-               loading.style.display = 'none';
-                instaImage.src = data.data[0].thumb
-               window.location.href = data.data[0].link
 
+      loading.style.display = 'block';
 
-               
-           })
+      console.log(url)
 
-            
+      url = newurl ? newurl : url
+
+      console.log(newurl)
+
+      fetch('/download', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({
+          url
         })
+      }).then(res => {
+        return res.json()
+      }).then(data => {
+
+        console.log(data)
+
+        if (!data.status) {
+
+          return alert(data.error)
+        }
+
+
+        loading.style.display = 'none';
+        instaImage.src = data.data[0].thumb
+        window.location.href = data.data[0].link
 
 
 
+      })
 
 
     })
+
+
+
+
+
+  })
 </script>
