--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,49 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="google-adsense-account" content="ca-pub-9467128470827962">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="apple-touch-icon" sizes="57x57" href="/images/-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/images/-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/images/-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/images/-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/images/-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/images/-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/images/-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/images/-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/images/-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="/images/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="/iamges/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-<link rel="manifest" href="/images/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
-    <meta name="description" content="
+    <link rel="apple-touch-icon" sizes="57x57" href="/images/-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/images/-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/images/-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/images/-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/images/-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/images/-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/images/-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/images/-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/images/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/iamges/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <link rel="manifest" href="/images/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="description"
+        content="
    GetReels is your ultimate solution for effortlessly downloading Instagram videos in just a few clicks. Whether it's a captivating clip, a hilarious moment, or an inspiring post, GetReels offers a seamless experience for grabbing your favorite Instagram videos with ease. Simply paste the URL of the Instagram video into our user-friendly interface and unlock instant access to a plethora of download options. With GetReels, you can save Instagram videos directly to your device in high quality, ensuring you never miss a moment worth keeping. Our intuitive platform streamlines the process, allowing you to download Instagram videos quickly and conveniently. Say goodbye to complicated procedures and hello to hassle-free downloading with GetReels.">
     <meta name="keywords"
         content="Instagram video downloader, download Instagram videos, save Instagram videos, Instagram video download tool, Instagram download, IG video downloader">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
+    <link rel="stylesheet" href="/style/footer.css">
+    <link rel="stylesheet" href="/style/home.css">
+<link rel="stylesheet" href="/style/card.css">
     <title>{{title}}</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9467128470827962"
         crossorigin="anonymous"></script>
-    
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
-
+ <nav class="navbar">
+      <div class="container-fluid">
+        <a id="logo" href="/">
+        <h1 class="logo-get">GetReels</h1>
+        </a>
+        
+      </div>
+    </nav>
     {{{body}}}
 
 
-</body>
-</html>
+<footer class="footer2">
+    <div class="waves">
+      <div class="wave" id="wave1"></div>
+      <div class="wave" id="wave2"></div>
+      <div class="wave" id="wave3"></div>
+      <div class="wave" id="wave4"></div>
+    </div>
+    <ul class="social-icon">
+      <li class="social-icon__item"><a class="social-icon__link" href="https://www.facebook.com/afsalshaofficial/">
+          <ion-icon name="logo-facebook"></ion-icon>
+        </a></li>
+      <li class="social-icon__item"><a class="social-icon__link" href="https://twitter.com/emailafsalsha">
+          <ion-icon name="logo-twitter"></ion-icon>
+        </a></li>
+      <li class="social-icon__item"><a class="social-icon__link" href="https://www.linkedin.com/in/afsalmadathingal/">
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </a></li>
+      <li class="social-icon__item"><a class="social-icon__link" href="https://www.instagram.com/afsal.madathingal/">
+          <ion-icon name="logo-instagram"></ion-icon>
+        </a></li>
+    </ul>
+    <ul class="menu">
+      <li class="menu__item"><a class="menu__link" href="/">Home</a></li>
+      <li class="menu__item"><a class="menu__link" href="/about">About</a></li>
+      <li class="menu__item"><a class="menu__link" href="/services">Services</a></li>
+      <li class="menu__item"><a class="menu__link" href="/contactus">Contact</a></li>
 
-<script>
-    <script type="application/ld+json">
+    </ul>
+    <p>&copy;2024 Getreels | All Rights Reserved</p>
+  </footer>
+</body>
+
+</html>
+<script src="/js/script.js"></script>
+<script type="application/ld+json">
         {
             "@context": "http://schema.org",
         "@type": "Organization",
@@ -56,4 +95,5 @@
         ]
 }
 </script>
-</script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
