--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,11 +26,12 @@
    GetReels is your ultimate solution for effortlessly downloading Instagram videos in just a few clicks. Whether it's a captivating clip, a hilarious moment, or an inspiring post, GetReels offers a seamless experience for grabbing your favorite Instagram videos with ease. Simply paste the URL of the Instagram video into our user-friendly interface and unlock instant access to a plethora of download options. With GetReels, you can save Instagram videos directly to your device in high quality, ensuring you never miss a moment worth keeping. Our intuitive platform streamlines the process, allowing you to download Instagram videos quickly and conveniently. Say goodbye to complicated procedures and hello to hassle-free downloading with GetReels.">
     <meta name="keywords"
         content="Instagram video downloader, download Instagram videos, save Instagram videos, Instagram video download tool, Instagram download, IG video downloader">
+          <title>{{title}}</title>
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
     <link rel="stylesheet" href="/style/footer.css">
     <link rel="stylesheet" href="/style/home.css">
 <link rel="stylesheet" href="/style/card.css">
-    <title>{{title}}</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9467128470827962"
         crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js" integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
