--- a/public/style/home.css
+++ b/public/style/home.css
@@ -32,10 +32,11 @@ body {
 {
   background: #780206;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #061161, #780206);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #061161, #780206); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
-  
-
+  background: linear-gradient(to right, #35125c, #043744); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-attachment: fixed;
+  background-size: cover;
+  background-blend-mode: overlay;
+  backdrop-filter: blur(50px); /* Note: backdrop-filter is not supported in IE and Safari */
     width: 100%;
     height: 100%;
     display: flex;
