--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="/style/footer.css">
     <link rel="stylesheet" href="/style/home.css">
 <link rel="stylesheet" href="/style/card.css">
+<link rel="stylesheet" href="/style/nav.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9467128470827962"
         crossorigin="anonymous"></script>
@@ -38,14 +39,13 @@
 </head>
 
 <body>
- <nav class="navbar">
-      <div class="container-fluid">
-        <a id="logo" href="/">
-        <h1 class="logo-get">GetReels</h1>
-        </a>
-        
-      </div>
-    </nav>
+<ul class="nav-links">
+    <li><a href="/">Home</a></li>
+    <li class="center"><a href="/about">About</a></li>
+    <li class="upward"><a href="/services">Services</a></li>
+    <li class="forward"><a href="/contactus">Contact</a></li>
+</ul>
+
     {{{body}}}
 
 
